--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -3,7 +3,7 @@
 }
 
 .inner{
-    width: 100vh;
+    width: 80vh;
    padding: 0.3rem;
     border: 1px solid lightgray;
    border-radius: 3%;
@@ -16,6 +16,6 @@
 .form{
     margin:0.7%;
     padding: 1rem;
-    width: 100vh; 
+    width: 100%; 
     text-align: left;
 }
